# video_agent_workflow

./: .gitignore  README.md  pyproject.toml  requirements.txt
frontend/: app.js  index.html  styles.css
src/agent/: analyzer.py  base.py  main.py
src/api/: app.py  schemas.py  server.py
src/config/: config.py  setup_database.py
src/event/: __init__.py  events.py
src/logger/: __init__.py  logging.py
src/memory/: MySQL_Abstractor.py
src/model/asr/: __init__.py  base_asr.py  bytedance_llm_asr.py  qwen_asr.py
src/model/cosyvoice/: __init__.py  cosyvoice_tts.py  voice_manager.py
src/model/llm/: __init__.py  qwen_chat.py  qwen_vlm.py
src/model/tts/: base.py  bytedance_tts.py  text_splitter.py  utils.py
src/node/: add_mosaic.py  asr_transcribe.py  collect_videos.py  content_clipper.py  group_segments.py  interview_highlight.py  segment_analyzer.py  video_splitter.py
src/orchestration/: runner.py
src/prompt/: task.py  todo.py
src/services/: __init__.py  commentary_service.py  draft_service.py  highlight_service.py
src/session/: base_session.py  mysql_service.py  types.py
src/session_store/: __init__.py  store.py
src/tool/: __init__.py  base.py  example_tool.py  executor.py  media_analyze.py  registor.py  task.py  todo.py  types.py  upload_to_tos.py
src/utils/: count_tokens.py  ffmpeg_utils.py  font_resize.py  media_utils.py  process_utils.py  srt_convert.py  upload_files.py  video_utils.py
src/utils/translation/: __init__.py  (+1 more)
src/workflow/: highlight.py  highlight_async.py  highlight_draft.py  interview.py  runners.py  subtitle_conversion.py
(+21 files in other folders)
